# CMake

./: CMakeLists.txt  README.md  Test2.sublime-project  Test2.sublime-workspace
include/: libdemo.hpp  main.hpp
src/: CMakeLists.txt  libdemo.cpp  main.cpp
